--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,11 +7,30 @@
     font-style: normal;
 }
 /* CSS */
+#normal{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 #display-frame{
     background-color: #110C13;
 }
 #display{
-    color: #FD84DB;
+    margin: 1rem;
+    letter-spacing: 0.3rem;
+    text-align: right;
+    color: #fd84dbd3;
     font-size: 10vw;
     font-family: 'lcd_att_phone_timedateregular';
+}
+#buttons{
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+}
+#numbers{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+#zero{
+    grid-area: 4 / 1 / span 1 / span 3;
 }
