--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -31,7 +31,7 @@
 
 /* CSS */
 #background{
-    background-color: black;
+    background-color: rgb(248, 231, 231);
     width: 100vw;
     height: 100vh;
 }
@@ -47,7 +47,9 @@
     width: 80%;
     height: auto;
     border-radius: 1rem;
-
+    box-shadow: -.4rem -1.2rem 1.8em .3rem  rgba(132, 133, 132, 0.493),
+    -0.1rem -0.1rem .5rem .1rem  rgba(132, 133, 132, .9),
+    inset .2rem .2rem 1rem .2rem  rgba(129, 134, 133, 0.5);
 }
 #normal{
     display: flex;
@@ -56,7 +58,7 @@
 }
 #calculator-top{
 
-    inset: 1rem 1rem 1rem 1rem rgba(0,0,0,1);
+    box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
 
     width: 96%;
     height: auto;
@@ -73,8 +75,11 @@
 
 }
 #logo{
-    color: #F0E100;
-    font-size: 6vmin;
+    background-image: linear-gradient(45deg, #0CCA18, #29EAF4);
+    background-size: 100%;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 5vmin;
     font-family: press_start_2pregular;
    }
 #solar{
@@ -95,16 +100,23 @@
 }
 
 #display-frame{
-    background-color: #110C13;
-    border-radius: 0.3rem;
+    background-color: #ffffffb9;
+    border-radius: 0.6rem;
+    filter: blur(0.031rem);
+    overflow: hidden;
+    margin: 1rem .2rem;
 }
 #display{
-    margin: 0.15em;
-    letter-spacing: 0.08em;
+    margin: .1rem .1rem;
+    width: auto;
+    height: auto;
+    background-color: black;
+    letter-spacing: 0.05em;
     text-align: right;
     color: #fd84dbd3;
     font-size: 15vmin;
     font-family: 'lcd_att_phone_timedateregular';
+    overflow: hidden;
 }
 #buttons{
     display: grid;
