--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -85,18 +85,20 @@
 #solar{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-
     border-radius: 0.6rem;
     overflow: hidden;
-
+    box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
     width: 13rem;
-    height: 3em;
+    height: 3rem;
+    max-height: 50px;
 }
 .solar-panel{
-    background-color: black;
+    background-color: rgb(36, 35, 35);
     border-color: rgba(53, 53, 53, 0.377);
     border-width: 0.1rem;
     border-style: solid;
+
+    filter: blur(0.01rem);
 }
 
 #display-frame{
@@ -105,6 +107,8 @@
     filter: blur(0.031rem);
     overflow: hidden;
     margin: 1rem .2rem;
+
+    box-shadow: inset -0.15rem -0.05rem .2rem .008rem rgba(0,0,0,1);
 }
 #display{
     margin: .1rem .1rem;
