--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -39,10 +39,7 @@
 }
 #calculator-body{
     padding: 1rem;
-    background: rgb(208,208,208);
-    background: linear-gradient(0deg, rgba(208,208,208,1) 0%, rgba(214,214,214,1) 83%, rgba(153,156,155,1) 83.5%,
-     rgba(140,140,140,1) 83%, rgba(201,201,201,1) 85%, rgba(245,245,245,1) 86%); 
-    position: absolute;
+    background: rgb(208,208,208);position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -106,23 +103,17 @@
 }
 
 #display-frame{
-
-
     margin-top: .2rem;
-
-    z-index: 2;
-    
+    z-index: 2;    
     background: rgb(255,255,255);
     background: linear-gradient(162deg, rgba(255,255,255,1) 2%, rgba(199,226,252,1) 9%, rgba(255,255,255,1) 15%, rgba(195,229,244,1) 19%, rgba(255,255,255,1) 22%, rgba(200,232,245,1) 26%, rgba(255,255,255,1) 32%); 
     border-radius: 0.6rem;
     filter: blur(0.031rem);
     overflow: hidden;
     margin: 1rem .2rem;
-
     width: 98%;
     max-height: 70%;
     justify-self: center;
-
     box-shadow: inset -0.15rem -0.05rem .2rem .008rem rgba(0,0,0,1);
 }
 #display{
@@ -156,13 +147,6 @@
     text-align: center;
 
     background-color: rgb(251,255,15);
-    background-image: radial-gradient(circle, rgb(230, 233, 56) 10% 45%, rgb(190, 192, 92) 90%, rgb(250, 250, 175) 1%),
-    radial-gradient(circle, rgb(230, 233, 56) 10% 45%, rgb(190, 192, 92) 90%, rgb(250, 250, 175) 1%),
-    radial-gradient(circle, rgb(230, 233, 56) 10% 45%, rgb(190, 192, 92) 90%, rgb(250, 250, 175) 1%),
-    radial-gradient(circle, rgb(230, 233, 56) 10% 90%, rgb(190, 192, 92) 90%, rgb(250, 250, 175) 1%);
-    background-size: .8rem 150%, .8rem 150%;
-    background-position: calc(100% + .05rem) 50%, -.25rem 50%, 50% .25rem;
-    background-repeat: no-repeat;
 
 
     border-color: rgba(210,197,30,1);
@@ -204,6 +188,10 @@
     font-size: 5vmin;
     border-radius: 0.4em;
     margin: 0.08rem;
+
+    box-shadow: -.25rem -0.8rem 1.8em .15rem  rgba(132, 133, 132, 0.493),
+    0rem 0rem .15rem .15rem  rgb(0, 0, 0);
+
 
     background: rgb(25,134,164);
     background: radial-gradient(circle, rgba(25,134,164,1) 0%, rgba(69,193,227,1) 63%, rgba(132,227,255,1) 100%); }
