--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -44,24 +44,24 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    max-width: 100%;
+    max-width: 98%;
     height: auto;
     border-radius: 1rem;
     box-shadow: -.4rem -1.2rem 1.8em .3rem  rgba(132, 133, 132, 0.493),
     -0.1rem -0.1rem .5rem .1rem  rgba(132, 133, 132, .9),
     inset .2rem .2rem 1rem .2rem  rgba(129, 134, 133, 0.5);
 
-    display: flex;
-    flex-direction: column;
-    
+    display: grid;
+    grid-template-rows: 1fr 1.25fr 3fr;
+    justify-content: center;
+    align-items: center;
 }
 #calculator-top{
 
     box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
 
     max-width: 96%;
-    margin-bottom: 1rem;
-    height: auto;
+    height: 6em;
     
     padding: 2%;
     border-radius: 0.4rem;
@@ -111,8 +111,8 @@
     overflow: hidden;
     margin: 1rem .2rem;
     width: 98%;
+    max-width: 670px;
     max-height: 70%;
-    justify-self: center;
     box-shadow: inset -0.15rem -0.05rem .2rem .008rem rgba(0,0,0,1);
 }
 #display{
@@ -126,6 +126,9 @@
     font-size: 15vmin;
     font-family: 'lcd_att_phone_timedateregular';
     overflow: hidden;
+    text-overflow: ellipsis;
+    justify-self: center;
+
 }
 #buttons{
     display: grid;
