--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -45,7 +45,7 @@
     transform: translate(-50%, -50%);
 
     max-width: 98%;
-    height: auto;
+    max-height: 100vh;
     border-radius: 1rem;
     box-shadow: -.4rem -1.2rem 1.8em .3rem  rgba(132, 133, 132, 0.493),
     -0.1rem -0.1rem .5rem .1rem  rgba(132, 133, 132, .9),
