--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -31,7 +31,7 @@
 
 /* CSS */
 html{
-    font-size: 100%;
+    font-size: 1rem;
 }
 #background{
     background-color: rgb(248, 231, 231);
@@ -55,8 +55,8 @@ html{
     -0.1rem -0.1rem .5rem .1rem  rgba(132, 133, 132, .9),
     inset .2rem .2rem 1rem .2rem  rgba(129, 134, 133, 0.5);
 
-    display: grid;
-    grid-template-rows: 1fr 1fr 3fr;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -64,10 +64,11 @@ html{
 
     box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
 
-    max-width: 90%;
+    max-width: 90vmin;
+    min-width: 90min;
     height: auto;
     
-    padding: 5%;
+    padding: 5vmin;
     border-radius: 0.4rem;
 
     display: flex;
@@ -83,7 +84,7 @@ html{
     background-size: 100%;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 5vmin;
+    font-size: 4vmin;
     font-family: press_start_2pregular;
    }
 #solar{
@@ -93,14 +94,14 @@ html{
     overflow: hidden;
     box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
     flex-shrink: 2;
-    width: 10rem;
-    height: 3rem;
+    width: 25vmin;
+    height: 6vmin;
     border: 2px inset black;
 }
 .solar-panel{
     background-color: rgb(36, 35, 35);
     border-color: rgba(53, 53, 53, 0.377);
-    border-width: 0.1rem;
+    border-width: 0.5vmin;
     border-style: solid;
     filter: blur(0.01rem);
 }
@@ -116,6 +117,7 @@ html{
     margin: 1rem .2rem;
     width: 98%;
     max-width: 670px;
+    min-height: 60px;
     max-height: 70%;
     box-shadow: -0.1rem -0.05rem .1rem .008rem rgba(0,0,0,1);
 }
@@ -127,7 +129,7 @@ html{
     letter-spacing: 0.05em;
     text-align: right;
     color: #fd84dbd3;
-    font-size: 13vmin;
+    font-size: 15vmin;
     font-family: 'lcd_att_phone_timedateregular';
     overflow: hidden;
     justify-self: center;
@@ -148,11 +150,9 @@ html{
 }
 #numbers button{
     text-align: center;
-    background-color: hsl(199, 100%, 92%);
-    background: radial-gradient(circle, hsl(167, 34%, 76%) 5%, rgb(80, 223, 99) 63%, rgb(157, 255, 132) 100%); 
-
-
-    border-color: hsl(199, 100%, 92%);;
+    background-color: #ffd803;
+    
+    border-color: #ffd803;
 
     box-shadow: -.25rem -0.8rem 1.8em .15rem  rgba(132, 133, 132, 0.493),
     0rem 0rem .15rem .15rem  rgb(0, 0, 0);
@@ -182,9 +182,8 @@ html{
     0rem 0rem .15rem .15rem  rgb(0, 0, 0);
 
 
-    background: rgb(25,134,164);
-    background: radial-gradient(circle, rgba(25,134,164,1) 0%, rgba(69,193,227,1) 63%, rgba(132,227,255,1) 100%); 
-}
+    background-color: #e3f6f5;
+ }
 #equals{
     grid-area: 5 / 1 / span 1 / span 2;
     font-size: 50px ;
