--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -60,9 +60,9 @@ html{
 }
 #calculator-top{
     box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
-    max-width: 90vmin;
+    max-width: 88vmin;
     height: auto;    
-    padding: 5vmin;
+    padding: 3vmin;
     border-radius: 0.4rem;
     display: flex;
     justify-content: space-between;
@@ -71,12 +71,10 @@ html{
     background: linear-gradient(90deg, rgba(242,70,70,1) 0%, rgba(198,84,113,1) 48%, rgba(70,70,242,1) 100%); 
 }
 #logo{
-    background-image: linear-gradient(45deg, #0CCA18, #29EAF4);
-    background-size: 100%;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #0CCA18;
     font-size: 4vmin;
     font-family: press_start_2pregular;
+    margin-right: 2vmin;
    }
 #solar{
     display: grid;
