--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -40,24 +40,31 @@ main {
     justify-content: center;
     align-items: center;
     
-    position: fixed;
-    width: 100%;
-    height: 100%;   
+    width: 100vw;
+    height: 100vh;   
     
     background-color: rgb(248, 231, 231);
     background-size: cover;
 }
 
+button {
+    box-shadow:
+        -.25rem -0.8rem 1.8em .15rem  rgba(132, 133, 132, 0.493),
+        0rem 0rem .15rem .15rem  rgb(0, 0, 0);
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
+}
+
 #calculator-body {
-    box-sizing: border-box;
-    padding: 1vh 1vw;
+    padding: 2vh 1vw;
     background: rgb(175, 175, 175);
     max-width: 98vw;
     max-height: 100vh;
     border-radius: 1rem;
-    box-shadow: -.4rem -1.2rem 1.8em .3rem  rgba(132, 133, 132, 0.493),
-    -0.1rem -0.1rem .5rem .1rem  rgba(132, 133, 132, .9),
-    inset .2rem .2rem 1rem .2rem  rgba(129, 134, 133, 0.5);
+    box-shadow: 
+        -.4rem -1.2rem 1.8em .3rem  rgba(132, 133, 132, 0.493),
+        -0.1rem -0.1rem .5rem .1rem  rgba(132, 133, 132, .9),
+        inset .2rem .2rem 1rem .2rem  rgba(129, 134, 133, 0.5);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,13 +73,15 @@ main {
 
 #calculator-top {
     box-sizing: border-box;
-    box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
-    max-width: 88vmin;
-    height: auto;    
-    padding: 1rem 3vw;
-    border-radius: 0.4rem;
+    
     display: grid;
     grid-template-columns: 4fr 1fr;
+    
+    height: auto;    
+    padding: 3vh 3vw;
+    
+    box-shadow: inset -0.05rem -0.05rem .2rem .008rem rgba(0,0,0,1);
+    border-radius: 0.4rem;
     background: rgb(242,70,70);
     background: linear-gradient(90deg, rgba(242,70,70,1) 0%, rgba(198,84,113,1) 48%, rgba(70,70,242,1) 100%); 
 }
@@ -108,33 +117,36 @@ main {
 }
 
 #display-frame {
+    position: relative;
     margin-top: .2rem;
-    z-index: 2;    
+    z-index: 1;    
     background: rgb(255,255,255);
     background: linear-gradient(162deg, rgba(255,255,255,1) 2%, rgba(199,226,252,1) 9%, rgba(255,255,255,1) 15%, rgba(195,229,244,1) 19%, rgba(255,255,255,1) 22%, rgba(200,232,245,1) 26%, rgba(255,255,255,1) 32%); 
     border-radius: 0.6rem;
     filter: blur(0.031rem);
-    overflow: hidden;
     margin: 1rem .2rem;
     width: 98%;
     max-width: 670px;
-    min-height: 60px;
-    max-height: 70%;
+    height: 4.8rem;
     box-shadow: -0.1rem -0.05rem .1rem .008rem rgba(0,0,0,1);
 }
 
 #display {
-    z-index: 1;
-    width: auto;
-    height: 100%;
+    box-sizing: border-box;
+    position: relative;
+    z-index: -0;
+    width: 100%;
+    padding: 1%;
+    height: 4.5rem;
     background-color: black;
     letter-spacing: 0.05rem;
     text-align: right;
     color: #fd84dbd3;
-    font-size: 15vmin;
+    font-size: 4rem;
+    line-height: 4.5rem;
     font-family: 'lcd_att_phone_timedateregular';
     overflow: hidden;
-    justify-self: center;
+    align-self: center;
 }
 
 #buttons {
@@ -142,25 +154,22 @@ main {
     grid-gap: 1.5rem;
     grid-template-columns: 3fr 2fr;
     min-width: 95%;
+    max-height: 70vh;
     justify-self: center;
 }
+
 #numbers {
     display: grid;
-    grid-gap: .3rem;
+    grid-gap: .2rem;
     grid-template-columns: 1fr 1fr 1fr;
     margin-right: 0.1rem;
 }
 
-#numbers button
-{
+#numbers button {
     text-align: center;
     background-color: #ffd803;    
     border-color: #ffd803;
-    box-shadow: -.25rem -0.8rem 1.8em .15rem  rgba(132, 133, 132, 0.493),
-    0rem 0rem .15rem .15rem  rgb(0, 0, 0);
-    font-family: 'Roboto', sans-serif;
-    margin: 0.1rem;
-    font-size: 8vmin;
+
     border-radius: 0.25rem;
     padding: 0.4rem;
 }
@@ -175,13 +184,9 @@ main {
     grid-template-columns: 1fr 1fr;
 }
 
-#functions button {    
-    font-family: 'Roboto', sans-serif;
-    font-size: 5vmin;
-    border-radius: 0.4em;
-    margin: 0.08rem;
-    box-shadow: -.25rem -0.8rem 1.8em .15rem  rgba(132, 133, 132, 0.493),
-    0rem 0rem .15rem .15rem  rgb(0, 0, 0);
+#functions button {
+    font-size: 1rem;
+    border-radius: 0.4rem;
     background-color: #e3f6f5;
 }
 
@@ -191,36 +196,39 @@ main {
     background: rgb(25,134,164);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 425px) {
+    
      #calculator-body {
         max-width: 100vw;
         width: 100vw;
         max-height: 100vh;
-        height: 100vh;
+        height: auto;
         border-radius: 0;
     }
+    
     #calculator-top {
         max-width: 100vw;
         width: auto;
     }
+    
     #buttons {
         grid-template: 2fr 3fr 1fr / auto;
-        grid-gap: 2vh;
+        grid-row-gap: 2vh;
     }
+    
     #numbers {
         display: grid;
         grid-area: 2 / 1 / 3 / 2;
     }
+    
     #functions {
         grid-template: 1fr 1fr / repeat(4, 1fr);
     }
+    
     #equals {
         grid-area: 3 / 1 / 4 / 2;    
-        font-family: 'Roboto', sans-serif;
         font-size: 15vmin;
-        border-radius: 0.4rem;
-        box-shadow: -.25rem -0.8rem 1.8em .15rem  rgba(132, 133, 132, 0.493),
-        0rem 0rem .15rem .15rem  rgb(0, 0, 0);
+        border-radius: 0.4rem;        
         background-color: #e3f6f5;
     }
     
